@@ -1,5 +1,8 @@
 2012-12-27  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* tkcon.tcl (::tkcon::InitUI): catch deiconify to prevent error
+	when embedding. [Bug #44]
+
 	* tkcon.tcl (::tkcon::ExpandMethodname): improved expansion for
 	xotcl methods.  Also enhance expansion to allow break/continue
 	signals to differentiate "I'm not responsible" results from "I
